--- a/1.html
+++ b/1.html
@@ -13,4 +13,14 @@
   </ol>
   <h2>지하철 택배란?</h2>
   <p>지하철에 맡겨놓은 수화물을 자신의 행선지까지 가져다주는 서비스.</p>
+  <div id="disqus_thread"></div>
+<script>
+      (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://127-0-0-1-8002-index-html.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </body>
